--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="./Game.css">
+  <link rel="stylesheet" type="text/css" href="./css/Game.css">
   
   <title>Game</title>
 </head>
@@ -20,12 +20,12 @@
     <section id="gameOver">
         <h1 class="title"><span>G</span><span>A</span><span>M</span><span>E</span> <span>O</span><span>V</span><span>E</span><span>R</span></h1>
        <h3 id="restartButton">RESTART ?</h3>
-       <img src="./snakePicture.png" alt="snake picture">
+       <img src="./images/snakePicture.png" alt="snake picture">
     </section>
 
   <canvas id="canvas" width="1080" height="780"></canvas>
 
-  <script src="./game.js"></script>
-  <script src="./screens.js"></script>
+  <script src="./js/game.js"></script>
+  <script src="./js/screens.js"></script>
 </body>
 </html>
