--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section id="startScreen">
 
-      <h1>SNAKE</h1>
+      <h1><img src="./images/snakeTItle.png" class="snakePixelTitle"></h1>
       <h3>PRESS ENTER TO START</h3>
 
     </section>
@@ -20,7 +20,7 @@
     <section id="gameOver">
         <h1 class="title"><span>G</span><span>A</span><span>M</span><span>E</span> <span>O</span><span>V</span><span>E</span><span>R</span></h1>
        <h3 id="restartButton">RESTART ?</h3>
-       <img src="./images/snakePicture.png" alt="snake picture">
+       <img src="./images/snakePicture.png" alt="snake picture" class="snakePictureGameOver">
     </section>
 
   <canvas id="canvas" width="1080" height="780"></canvas>
