added slow motion power

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
     </section>
 
+    <section id="Legend">
+
+      <img src="./images/redcircle.png" class="circles"> <span> = REGULAR APPLE</span> <br/>
+      <img src="./images/bluecircle.png" class="circles"> <span> = CHANGES KEYBOARD DIRECTIONS</span><br/>
+      <img src="./images/goldcircle.png" class="circles"> <span> = RETURNS KEYBOARD BACK TO NORMAL</span><br/>
+
+    </section>
+
     <section id="gameOver">
         <h1 class="title"><span>G</span><span>A</span><span>M</span><span>E</span> <span>O</span><span>V</span><span>E</span><span>R</span></h1>
        <h3 id="restartButton">RESTART ?</h3>
