--- a/index.html
+++ b/index.html
@@ -18,16 +18,24 @@
     <!-- Legend explaining the different apples -->
     <section id="Legend">
 
-      <img src="./images/redcircle.png" class="circles"> <span> = REGULAR APPLE</span> <br/>
-      <img src="./images/bluecircle.png" class="circles"> <span> = CHANGES KEYBOARD DIRECTIONS</span><br/>
-      <img src="./images/goldcircle.png" class="circles"> <span> = RETURNS KEYBOARD BACK TO NORMAL</span><br/>
+      <span class="instructions">INSTRUCTIONS</span> <br/>
+
+      <img src="./images/redcircle.png" class="circles">   <span> REGULAR APPLE</span> <span class="toggleSoundText"> PRESS "S" TO<br/>TOGGLE SOUND</span> <br/>
+      <img src="./images/bluecircle.png" class="circles">  <span> CHANGES KEYBOARD DIRECTIONS</span> <span class="rKeyPower"> PRESS "R" TO <br/>USE SLOWING POWER <br/>WHEN AVAILABLE</span> <br/> 
+      <img src="./images/goldcircle.png" class="circles">  <span> RETURNS KEYBOARD BACK TO NORMAL</span> <br/>
+
+     
+      <img src="./images/arrows.png" class="arrowKeys"> 
+
+      <span class="changesText"> FIRST CHANGE MAKES <br/>ARROW KEYS GO<br/>INVERSE, SECOND CHANGE<br/> ONWARD GOES CLOCKWISE</span>
 
     </section>
 
     <!-- Game over screen, shown after collision -->
     <section id="gameOver">
         <h1 class="title"><span>G</span><span>A</span><span>M</span><span>E</span> <span>O</span><span>V</span><span>E</span><span>R</span></h1>
-       <h3 id="restartButton">RESTART ?</h3>
+        <p class="score">SCORE </p>
+       <h3 id="restartButton">RESTART</h3>
        <img src="./images/snakePicture.png" alt="snake picture" class="snakePictureGameOver">
     </section>
 
