made canvas more responsive but having difficulties making a smooth collision with the bottom border because of random height and the snake set unit movement

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <!-- Game canvas -->
-  <canvas id="canvas" width="1080" height="780"></canvas>
+  <canvas id="canvas"></canvas>
 
   <!-- Game javascript file -->
   <script src="./js/game.js"></script>
