added media queries for laptop and laptop L

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <!-- Legend explaining the different apples -->
-    <section id="Legend">
+    <section id="legend">
 
       <span class="instructions">INSTRUCTIONS</span> <br/>
 
